--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,5 @@
     <string name="mainActivity_textView_passwordLabel">Password</string>
     <string name="mainActivity_textView_usernameLabel">Username</string>
     <string name="mainActivity_toast_wrongCredentials">Wrong credentials</string>
+    <string name="mainActivity_toast_loginSubtitle">shared knowledge by all to all</string>
 </resources>
