added translation and background used on the updated login layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="home_textView_welcomeText">Bem-vindo, %s!</string>
     <string name="home_button_logout">Sair</string>
     <string name="home_toast_backpressed">Pressione novamente para sair</string>
+    <string name="asGuest">Acessar como <b>convidado</b></string>
+    <string name="forgotPass">esqueci minha senha</string>
 </resources>
