--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,48 @@
         <b>Conclusão</b>
         Então vimos que esse texto é apenas um teste de layout no final das contas, quem diria.
         Muito obrigado por ter lido até aqui! Qualquer dúvida deixe nos comentários ou me procure nos corredores da faculdade.
+        Ficarei feliz em ajudar!aaaaaaaaaaaaa
+        \n\n\n
+        Hoje o JavaScript é muito mais que interações com HTML.
+        Podemos fazer coisas incríveis além do frontend.
+        Nesse tutorial irei explicar como o Node.Js atende essa demanda!\n
+        <b>Configurando tudo</b>
+        Antes de mais nada, vamos precisar deixar o terreno preparado para nossa aplicação.
+        Primeiramente crie um diretório, navegue até ele e inicialize seu projeto com este código.\n
+        <b>Configurando tudo de novo</b>
+        Antes de mais nada, vamos precisar deixar o terreno preparado para nossa aplicação.
+        Primeiramente crie um diretório, navegue até ele e inicialize seu projeto com este código.\n
+        <b>Conclusão</b>
+        Então vimos que esse texto é apenas um teste de layout no final das contas, quem diria.
+        Muito obrigado por ter lido até aqui! Qualquer dúvida deixe nos comentários ou me procure nos corredores da faculdade.
+        Ficarei feliz em ajudar!
+        \n\n\n
+        Hoje o JavaScript é muito mais que interações com HTML.
+        Podemos fazer coisas incríveis além do frontend.
+        Nesse tutorial irei explicar como o Node.Js atende essa demanda!\n
+        <b>Configurando tudo</b>
+        Antes de mais nada, vamos precisar deixar o terreno preparado para nossa aplicação.
+        Primeiramente crie um diretório, navegue até ele e inicialize seu projeto com este código.\n
+        <b>Configurando tudo de novo</b>
+        Antes de mais nada, vamos precisar deixar o terreno preparado para nossa aplicação.
+        Primeiramente crie um diretório, navegue até ele e inicialize seu projeto com este código.\n
+        <b>Conclusão</b>
+        Então vimos que esse texto é apenas um teste de layout no final das contas, quem diria.
+        Muito obrigado por ter lido até aqui! Qualquer dúvida deixe nos comentários ou me procure nos corredores da faculdade.
+        Ficarei feliz em ajudar!
+        \n\n\n
+        Hoje o JavaScript é muito mais que interações com HTML.
+        Podemos fazer coisas incríveis além do frontend.
+        Nesse tutorial irei explicar como o Node.Js atende essa demanda!\n
+        <b>Configurando tudo</b>
+        Antes de mais nada, vamos precisar deixar o terreno preparado para nossa aplicação.
+        Primeiramente crie um diretório, navegue até ele e inicialize seu projeto com este código.\n
+        <b>Configurando tudo de novo</b>
+        Antes de mais nada, vamos precisar deixar o terreno preparado para nossa aplicação.
+        Primeiramente crie um diretório, navegue até ele e inicialize seu projeto com este código.\n
+        <b>Conclusão</b>
+        Então vimos que esse texto é apenas um teste de layout no final das contas, quem diria.
+        Muito obrigado por ter lido até aqui! Qualquer dúvida deixe nos comentários ou me procure nos corredores da faculdade.
         Ficarei feliz em ajudar!
         \n\n\n
     </string>
